# synbio_morpher

./: .gitignore  LICENSE  README.md  add_license.py  docker-compose.yml  pMinE  pyproject.toml  pyrightconfig.json  report.txt  requirements.txt  run_all.sh  run_main.py  setup.cfg  setup.py  simple_circuit.ipynb  simple_circuit.py  tester.fasta  toy_mRNA_circuit.fasta  x_pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
Nah.devcontainer/: devcontainer.json
docker/: Dockerfile  common_cmd.sh  daemon.json  requirements.txt
docker_unix/: Dockerfile  Dockerfile_IntaRNA  Dockerfile_Seb  Dockerfile_c  Dockerfile_multistage  Dockerfile_old  requirements.txt
docker_unix_hslab/: Dockerfile  post_install2.sh  requirements.txt
docker_windows/: Dockerfile  requirements.txt
docs/: classes.py
examples/: 3_calculating_binding_energy.ipynb  4_mutation_sampling.ipynb  data_enhancing.py
explanations/: 1_rna_circuit_simulations.ipynb  2_analytics.ipynb  2_analytics_o.ipynb  3_binding_energy.ipynb  3_calculating_binding_energy.ipynb  4_mutation_sampling.ipynb  5_examine_binding_energies.ipynb  5_examine_circuit_stats.ipynb  6_ecoli_rates.ipynb  6_examine_circuit_stats.ipynb  6a_examine_circuit_stats_diffs.ipynb  7_ecoli_rates.ipynb  8_dataset_info.ipynb  analytics_o.ipynb  binding_energy.ipynb  binding_energy_reparameterisation.ipynb  binding_energy_reparameterisation_2.ipynb  binding_energy_scan.ipynb  binding_energy_scan.py  binding_rates_dissociation.csv  corrs.csv  data_enhancing.py  dynamics_simulation.ipynb  ecoli_rates.ipynb  eqconstants.csv  examine_circuit_stats.ipynb  feature_extraction_naive.ipynb  feature_extraction_naive.py  feature_space.ipynb  match_params.ipynb  mutation_analysis.ipynb  mutation_sampling.ipynb  null_circuit.ipynb  rna_circuit_simulations.ipynb  scrap_5_examine_circuit_stats.ipynb  scrappy.ipynb  sensitivity_peak.ipynb  test.npy
notebooks/: 01_binding_energy_adaptation_scan.ipynb  02_match_params.ipynb  03_binding_energy_reparameterisation.ipynb  05_dynamics_simulation.ipynb  06_rna_circuit_sim_medsim.ipynb  07_null_circuit.ipynb  08_variation.ipynb  09_mutation_analysis.ipynb  forcing.ipynb  (+43 more)
(+679 files in other folders)
