[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synbio_morpher"
version = "0.0.4"
authors = [
  { name="Olivia Gallup", email="olivia.gallup@gmail.com" },
]
description = "Build, simulate, and analyse genetic circuits and the effect of mutations."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/olive004/synbio_morpher"
"Bug Tracker" = "https://github.com/olive004/synbio_morpher/issues"