[metadata]
name = synbio_morpher
description = Build, simulate, and analyse genetic circuits and the effect of mutations.
author = Olivia Gallup
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    synbio_morpher
install_requires =
python_requires = >=3.6
package_dir =
    = .
zip_safe = no