[metadata]
name = synbio_morpher
description = Build, simulate, and analyse genetic circuits and the effect of mutations.
author = Olivia Gallup
license = MIT
license_files = LICENSE
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
# packages =
#     synbio_morpher
install_requires =
python_requires = >=3.6
package_dir =
    = .
packages = find:
zip_safe = no

[options.packages.find]
where = .